# fluiddyn

./: .appveyor.yml  .gitlab-ci.yml  .hgignore  .hgtags  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  HOWTO.md  HOWTO.txt  MANIFEST.in  Makefile  README.rst  bitbucket-pipelines.yml  environment.yml  noxfile.py  pixi.toml  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-linux.yml  ci-windows.yml
doc/: HOWTO_build_the_doc  Makefile  advice_developers.md  advice_developers.rst  advice_on_Python.md  advice_on_Python.rst  build_Python.rst  citizen_code_of_conduct.md  code-of-conduct.md  conf.py  environment.yml  example_from_numpy_doc.py  features.rst  get_good_Python_env.md  get_good_Python_env.rst  hgrc  index.md  index.rst  install.md  install.rst  intro-motivations.md  intro-motivations.rst  main_environment.yml  mercurial_bitbucket.rst  mercurial_heptapod.md  mercurial_heptapod.rst  miscellaneous.md  miscellaneous.rst  overview.rst  python_for_fluiddyn.rst  requirements.txt  setup_ubuntu1804.md  setup_ubuntu1804.rst  simple.pythranrc  to_do.md  to_do.rst  tutorials.md  tutorials.rst  workflow-data-figs.md  workflow_dev.md  (+3 more)
doc/For_pypi_redirect/: index.html
doc/examples/: make_figures.py
doc/ipynb/: README_for_ipynb_writers.rst  overview.ipynb  tuto_paramscontainer.ipynb  tuto_serieofarrays.ipynb  tuto_timer.ipynb
doc/ipynb/executed/: tuto_query.ipynb
doc/newsfragments/: 41.removed  42.changed  86.changed  README.md  README.rst
doc/tutorials/: overview.md  tuto_paramscontainer.md  tuto_serieofarrays.md  tuto_timer.md
doc/tutorials/executed/: tuto_query.ipynb
docker/: Dockerfile  Dockerfile_pixi
fluiddoc/: __init__.py  fluiddocset.py  fluidnbstripout.py  ipynb_maker.py  mathmacro.py
fluiddyn/: .pylintrc  __init__.py  _version.py  debug.py
fluiddyn/calcul/: __init__.py  easypyfft.py  setofvariables.py  signal.py  sphericalharmo.py
fluiddyn/calcul/easypyfft/: __init__.py  dct.py  fft.py
fluiddyn/calcul/test/: test_easypyfft.py  test_easypyfft_dct.py  test_setofvariables.py  test_signal.py  test_sphericalharmo.py
fluiddyn/clusters/: __init__.py  azzurra.py  ciment.py  cines.py  gricad.py  idris.py  legi.py  licallo.py  local.py  oar.py  pbs.py  slurm.py  snic.py  tgcc.py
fluiddyn/clusters/test/: test_local.py  test_oar.py  test_pbs.py  test_slurm_snic.py
fluiddyn/io/: __init__.py  binary.py  dantec.py  davis.py  digiflow.py  dump.py  hdf5.py  image.py  in_py.py  multitiff.py  mycsv.py  ns3d.py  query.py  rdvision.py  redirect_stdout.py  tee.py  txt.py
fluiddyn/io/test/: test_binary.py  test_dantec.py  test_digiflow.py  test_dump.py  test_hdf5.py  test_image.py  test_in_py.py  test_multitiff.py  test_mycsv.py  test_ns3d.py  test_query.py  test_rdvision.py  test_tee.py  test_txt.py
fluiddyn/io/test/ns3d_files/: PV.t=0000.000  forcing_2D_info.in_L=30x30_nh=48_expLO_b=1.8_Ti=7.0_nbgene=4_d=4_T=28  forcing_2D_info.in_L=30x30_nh=48_expLO_b=1.8_Ti=7.0_nbgene=4_d=4_T=28_little-endian
fluiddyn/io/test/rdvision_files/: Dalsa2.seq  Dalsa2.sqb  Dalsa2.xml
fluiddyn/output/: __init__.py  colorchart.py  figs.py  latextables.py  movies.py  rcparams.py  util.py
fluiddyn/output/test/: test_colorchart.py  test_figs.py
fluiddyn/util/: __init__.py  compat.py  constants.py  containerxml.py  daemons.py  deamons.py  debug_with_ipython.py  easypyfft.py  gui.py  info.py  logger.py  mail.py  mpi.py  numpy_distutils_cpuinfo.py  opencv.py  operator.py  paramcontainer.py  paramcontainer_gui.py  query.py  serieofarrays.py  signal.py  sphericalharmo.py  tee.py  terminal_colors.py  timer.py  userconfig.py  util.py  xmltotext.py
fluiddyn/util/matlab2py/: __init__.py  cleanmat.py  mat2wrongpy.py
fluiddyn/util/matlab2py/test/: courant.m  test_matlab2py.py
fluiddyn/util/test/: file.xml  test_daemons.py  test_easypyfft.py  test_info.py  test_logger.py  test_mpi.py  test_paramcontainer.py  test_query.py  test_serieofarrays.py  test_timer.py  test_util.py
fluidrtd/: __init__.py  ipynb_maker.py
misc/spack/: README.md
misc/spack/env-fluidsim/: spack.yaml
misc/spack/fluiddyn/: repo.yaml
misc/spack/helper-creations/: Makefile  README.md  get_info.py  print_info.py  pyproject.toml  save_create_commands.py
