[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fluiddyn"
description = "Framework for studying fluid dynamics."
keywords = ["Fluid dynamics", "research"]
license = {text = "CeCILL-B License"}
authors = [{name = "Pierre Augier", email = "pierre.augier@legi.cnrs.fr"}]
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "h5py",
    "h5netcdf",
    "psutil >= 5.2.1",
    "distro",
    "qtpy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://foss.heptapod.net/fluiddyn/fluiddyn"
documentation = "https://fluiddyn.readthedocs.io"
twitter = "https://twitter.com/pyfluiddyn"
conda-forge = "https://github.com/conda-forge/fluiddyn-feedstock"

[project.optional-dependencies]
doc = [
    "jupyter",
    "sphinx",
    "sphinx_rtd_theme",
    "numpydoc",
    "sphinxemoji",
    "myst-nb",
    "sphinx-copybutton",
    "pyqt5",
    "towncrier",
    "scipy",
    "scikit-image",
    "nbstripout",
    "sphinxcontrib-mermaid",
]
fft = ["pyfftw >= 0.10.4"]
mpi = ["mpi4py"]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
    "ipython",
    "ipdb",
    "scipy",
    "pillow",
    "imageio",
    "fluiddyn[fft]",
]
dev = ["fluiddyn[doc, test, mpi]"]
full = [
    "fluiddyn[dev]",
    "pulp",
    "scikit-image",
    "opencv-python",
]

[tool.setuptools]
include-package-data = false

[tool.coverage.run]
source = ["./fluiddyn"]
data_file = ".coverage/coverage"
omit = ["*/test*.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "raise ValueError",
    "if __name__ == '__main__':",
]

[tool.coverage.html]
directory = ".coverage"

[tool.coverage.xml]
output = ".coverage/coverage.xml"

[tool.towncrier]
package = "fluiddyn"
single_file = true  # if false, filename is formatted like `title_format`.
filename = "CHANGES.rst"
directory = "doc/newsfragments"
template = "doc/newsfragments/template.rst.j2"
title_format = false  # if false, template includes title
issue_format = "`!{issue} <https://foss.heptapod.net/fluiddyn/fluiddyn/-/merge_requests/{issue}>`__"
underline = "-~"
# wrap = true # Wrap text to 79 characters
all_bullets = true  # make all fragments bullet points

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[tool.black]
line-length = 82

[tool.isort]
profile = "black"
line_length = 82
include_trailing_comma = true
atomic = true
known_first_party = ["fluiddyn", "fluiddoc"]
multi_line_output = 3
