[metadata]
name = fluiddyn
description = Framework for studying fluid dynamics.
keywords = Fluid dynamics, research
license = CeCILL-B License

[options]
python_requires = >= 3.6
setup_requires =
    setuptools

install_requires =
    numpy
    matplotlib
    h5py
    h5netcdf
    psutil >= 5.2.1
    distro; python_version>="3.8"
    cached_property; python_version < "3.8"

[options.extras_require]

doc =
    sphinx
    sphinx_rtd_theme
    numpydoc
    sphinxemoji

fft =
    pyfftw >= 0.10.4

mpi = mpi4py

test =
    pytest
    pytest-cov
    ipython
    ipdb
    %(fft)s

dev =
    %(doc)s
    %(test)s
    %(mpi)s

full =
    %(dev)s
    scipy
    pillow
    imageio
    scikit-image
    opencv-python

[bdist_wheel]
universal = 1

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503

[coverage:run]
source = ./fluiddyn
data_file = .coverage/coverage
omit = */test*.py

[coverage:report]
show_missing = True
exclude_lines =
    raise ValueError
    if __name__ == '__main__':

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml
