[metadata]
name = fluiddyn
description = Framework for studying fluid dynamics.
keywords = Fluid dynamics, research
license = CeCILL-B License
author = Pierre Augier
author_email = pierre.augier@legi.cnrs.fr
url = https://foss.heptapod.net/fluiddyn/fluiddyn
project-urls =
    documentation = https://fluiddyn.readthedocs.io
    twitter = https://twitter.com/pyfluiddyn
    conda-forge = https://github.com/conda-forge/fluiddyn-feedstock

[options]
python_requires = >= 3.6

install_requires =
    numpy
    matplotlib
    h5py
    h5netcdf
    psutil >= 5.2.1
    distro; python_version>="3.8"
    cached-property; python_version < "3.8"

[options.extras_require]

doc =
    jupyter
    sphinx
    sphinx_rtd_theme
    numpydoc
    sphinxemoji
    myst-nb
    sphinx-copybutton
    pyqt5
    towncrier

fft =
    pyfftw >= 0.10.4

mpi = mpi4py

test =
    coverage
    pytest
    pytest-cov
    ipython
    ipdb
    scipy>=1.4.0
    pillow
    imageio
    %(fft)s

dev =
    %(doc)s
    %(test)s
    %(mpi)s

full =
    %(dev)s
    pulp
    scikit-image
    opencv-python

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503

[coverage:run]
source = ./fluiddyn
data_file = .coverage/coverage
omit = */test*.py

[coverage:report]
show_missing = True
exclude_lines =
    raise ValueError
    if __name__ == '__main__':

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml

[isort]
line_length = 82
known_first_party = fluiddyn,fluiddoc
multi_line_output = 3
