[options.extras_require]

doc =
    jupyter
    sphinx
    sphinx_rtd_theme
    numpydoc
    sphinxemoji
    myst-nb
    sphinx-copybutton
    pyqt5
    towncrier
    scipy
    scikit-image
    nbstripout
    sphinxcontrib-mermaid

fft =
    pyfftw >= 0.10.4

mpi = mpi4py

test =
    coverage
    pytest
    pytest-cov
    ipython
    ipdb
    scipy
    pillow
    imageio
    %(fft)s

dev =
    %(doc)s
    %(test)s
    %(mpi)s

full =
    %(dev)s
    pulp
    scikit-image
    opencv-python

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503
